manifests/piaware/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: piaware
  namespace: piaware
  labels:
    app: piaware
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app: piaware
